[package]
name = "xiaotserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
actix-files = "0.6.2"
serde_json = "1.0.82"
serde = {version ="1.0.139",features = ["derive"]}
idna = "0.3.0"

[profile.fast]
inherits = "release"
opt-level = 3 
debug = false 
split-debuginfo = 'off' 
debug-assertions = false 
overflow-checks = false 
lto = true 
panic = 'unwind' 
incremental = false 
codegen-units = 1 
rpath = false